--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -3628,6 +3628,23 @@
       <td>Barry &amp; Martin’s Trust</td>
       <td>英国贝利马丁基金会</td>
       <td>United Kingdom</td>
+      <td>Increasing Outreach to Target Populations to Improve HIV Testing Programs</td>
+      <td>英国贝利马丁加大目标人群宣传提高艾滋病检测项目</td>
+      <td>Jiangxi Province</td>
+      <td>江西省</td>
+      <td>Health</td>
+      <td>2022-06-24</td>
+      <td>2023-02-28</td>
+      <td>Nanchang Rainbow Health Information Public Service Center</td>
+      <td>南昌彩虹健康咨询公益服务中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Nanchang Bureau of Civil and Religious Affairs</td>
+      <td>南昌市民政局</td>
+    </tr>
+    <tr>
+      <td>Barry &amp; Martin’s Trust</td>
+      <td>英国贝利马丁基金会</td>
+      <td>United Kingdom</td>
       <td>Donations to Zunyi Yuan’ai Famous City Public Welfare Association</td>
       <td>英国贝利.马丁基金会向遵义缘爱名城公益协会捐款</td>
       <td>Guizhou Province</td>
@@ -4323,20 +4340,20 @@
     </tr>
     <tr>
       <td>Barry &amp; Martin’s Trust</td>
-      <td>英国贝利马丁基金会</td>
+      <td>英国贝利-马丁基金会</td>
       <td>United Kingdom</td>
-      <td>Increasing Outreach to Target Populations to Improve HIV Testing Programs</td>
-      <td>英国贝利马丁加大目标人群宣传提高艾滋病检测项目</td>
-      <td>Jiangxi Province</td>
-      <td>江西省</td>
-      <td>Health</td>
-      <td>2022-06-24</td>
-      <td>2023-02-28</td>
-      <td>Nanchang Rainbow Health Information Public Service Center</td>
-      <td>南昌彩虹健康咨询公益服务中心</td>
+      <td>Program to Care for Youth Infected with HIV</td>
+      <td>青年HIV感染者关怀项目</td>
+      <td>Tianjin City</td>
+      <td>天津市</td>
+      <td>Health, Youth</td>
+      <td>2022-05-01</td>
+      <td>2022-12-31</td>
+      <td>Shenlan Public Health Counseling Service Center</td>
+      <td>天津深蓝公共卫生咨询服务中心</td>
       <td>Non-Profit or Foundation</td>
-      <td>Nanchang Bureau of Civil and Religious Affairs</td>
-      <td>南昌市民政局</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
     </tr>
     <tr>
       <td>Bay Area Hong Kong Center</td>
@@ -4502,6 +4519,23 @@
       <td>Environment, Youth</td>
       <td>2020-06-01</td>
       <td>2020-12-31</td>
+      <td>Shanghai Education Expansion Youth Development Center</td>
+      <td>上海育拓青少年发展中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Shanghai City, Jing’an District Communist Youth League Committee</td>
+      <td>共青团上海市静安区委员会</td>
+    </tr>
+    <tr>
+      <td>Behring Global Educational Foundation</td>
+      <td>环球健康与教育基金会</td>
+      <td>United States</td>
+      <td>World Earth Day—Youth Scientific Knowledge Challenge</td>
+      <td>环球自然日-青少年自然科学知识挑战活动</td>
+      <td>Beijing City / Liaoning Province / Heilongjiang Province / Shanghai City / Shandong Province / Tianjin City / Zhejiang Province / Fujian Province / Chongqing City / Henan Province / Guangdong Province / Sichuan Province / Shaanxi Province / Guizhou Province / Jiangsu Province / Jiangxi Province</td>
+      <td>北京市,辽宁省,黑龙江省,上海市,山东省,天津市,浙江省,福建省,重庆市,河南省,广东省,四川省,陕西省,贵州省,江苏省,江西省</td>
+      <td>Environment, Youth</td>
+      <td>2022-04-01</td>
+      <td>2022-12-31</td>
       <td>Shanghai Education Expansion Youth Development Center</td>
       <td>上海育拓青少年发展中心</td>
       <td>Non-Profit or Foundation</td>
@@ -7484,6 +7518,23 @@
       <td>共青团上海市静安区委员会</td>
     </tr>
     <tr>
+      <td>CAF America</td>
+      <td>美国慈善援助基金会</td>
+      <td>United States</td>
+      <td>Taking Care of Our Community 2022 Program</td>
+      <td>我关注社区2022项目</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Unknown</td>
+      <td>2022-02-01</td>
+      <td>2023-01-31</td>
+      <td>Hands On Shanghai</td>
+      <td>上海闵行区牵手上海志愿者工作服务中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Shanghai City, Minhang District Chinese Communist Youth League Committee</td>
+      <td>中国共产主义青年团上海市闵行区委员会</td>
+    </tr>
+    <tr>
       <td>Cai Chongxin and Wu Minghua Charity Foundation</td>
       <td>蔡崇信和吴明华公益基金会（英文翻译）</td>
       <td>Unknown</td>
@@ -10411,6 +10462,23 @@
       <td>Chiang Chen Industrial Charity Foundation</td>
       <td>蒋震工业慈善基金（香港）有限公司</td>
       <td>Hong Kong</td>
+      <td>Chiang Chen Heze Scholarship</td>
+      <td>蒋震菏泽奖学金</td>
+      <td>Shandong Province</td>
+      <td>山东省</td>
+      <td>Education</td>
+      <td>2022-06-01</td>
+      <td>2023-05-31</td>
+      <td>Shandong University Education Foundation</td>
+      <td>山东大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Shandong Department of Education</td>
+      <td>山东省教育厅</td>
+    </tr>
+    <tr>
+      <td>Chiang Chen Industrial Charity Foundation</td>
+      <td>蒋震工业慈善基金（香港）有限公司</td>
+      <td>Hong Kong</td>
       <td>Donations to Shanghai Jiaotong University’s “Chiang Chen Scholarship”</td>
       <td>蒋震工业慈善基金向上海交通大学捐赠“蒋震奖学金”</td>
       <td>Shanghai City</td>
@@ -10695,23 +10763,6 @@
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Chiang Chen Industrial Charity Foundation</td>
-      <td>蒋震工业慈善基金（香港）有限公司</td>
-      <td>Hong Kong</td>
-      <td>Chiang Chen Heze Scholarship</td>
-      <td>蒋震菏泽奖学金</td>
-      <td>Shandong Province</td>
-      <td>山东省</td>
-      <td>Education</td>
-      <td>2022-06-01</td>
-      <td>2023-05-31</td>
-      <td>Shandong University Education Foundation</td>
-      <td>山东大学教育基金会</td>
-      <td>Non-Profit or Foundation</td>
-      <td>Shandong Department of Education</td>
-      <td>山东省教育厅</td>
     </tr>
     <tr>
       <td>Chiang Cheng Industrial Charity Foundation</td>
@@ -17427,6 +17478,23 @@
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Foundation for Theological Education in Southeast Asia (FTESEA)</td>
+      <td>东南亚神学教育基金会</td>
+      <td>United States</td>
+      <td>2020 Fianancial Subsidy</td>
+      <td>东南亚神学教育基金会2020年资助金</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Religion</td>
+      <td>2021-01-01</td>
+      <td>2022-02-11</td>
+      <td>China Christian Council</td>
+      <td>中国基督教协会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>United Front Work Department</td>
+      <td>中共中央统战部</td>
     </tr>
     <tr>
       <td>Foundation of Chinese Culture for Sustainable Development</td>
@@ -30063,23 +30131,6 @@
       <td>Hong Kong Skywalker Charitable Fund Limited</td>
       <td>香港天行者慈善基金有限公司</td>
       <td>Hong Kong</td>
-      <td>Sending Care, Warmth, and Concern for Underprivilaged Groups in Mountain Regions, Collective Help for the Prosperity and Strengthening of Mountainous Regions</td>
-      <td>送关怀，送温暖，关爱山区弱势人群，共助山区繁荣富强</td>
-      <td>Guangdong Province</td>
-      <td>广东省</td>
-      <td>Poverty Alleviation, Rural Issues/Development</td>
-      <td>2019-05-02</td>
-      <td>2019-12-20</td>
-      <td>Yangshan County Communist Youth League Committee</td>
-      <td>共青团阳山县委员会</td>
-      <td>Party or Government Entity</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Hong Kong Skywalker Charitable Fund Limited</td>
-      <td>香港天行者慈善基金有限公司</td>
-      <td>Hong Kong</td>
       <td>2022 Qingyuan Mountainous Area Compassionate Activities</td>
       <td>2022年天行者清远山区爱心活动</td>
       <td>Guangdong Province</td>
@@ -30092,6 +30143,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Skywalker Charitable Fund Limited</td>
+      <td>香港天行者慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>Sending Care, Warmth, and Concern for Underprivilaged Groups in Mountain Regions, Collective Help for the Prosperity and Strengthening of Mountainous Regions</td>
+      <td>送关怀，送温暖，关爱山区弱势人群，共助山区繁荣富强</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Poverty Alleviation, Rural Issues/Development</td>
+      <td>2019-05-02</td>
+      <td>2019-12-20</td>
+      <td>Yangshan County Communist Youth League Committee</td>
+      <td>共青团阳山县委员会</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
     </tr>
     <tr>
       <td>Hong Kong South Lions Club</td>
@@ -44080,6 +44148,23 @@
       <td>2020-08-03</td>
       <td>Xining City Dawn Public Welfare Assistance Center</td>
       <td>西宁市曙光公益援助中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>MISEREOR Foundation</td>
+      <td>德国米苏尔社会发展基金会</td>
+      <td>Germany</td>
+      <td>Jiangxi Public Welfare Organizational Development Program</td>
+      <td>江西公益组织发展项目</td>
+      <td>Jiangxi Province</td>
+      <td>江西省</td>
+      <td>Civil Society Capacity-Building</td>
+      <td>2022-06-01</td>
+      <td>2023-05-31</td>
+      <td>Nanchang Yixinyiyi Public Welfare Service Center</td>
+      <td>南昌益心益意公益服务中心</td>
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
@@ -70064,6 +70149,57 @@
       <td>Yale-China Association</td>
       <td>雅礼协会</td>
       <td>United States</td>
+      <td>2022 Chia Family Health Fellowship Program (Fenghuang County)</td>
+      <td>2022年度湘西贾氏卫生奖学金项目（凤凰县）</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Health</td>
+      <td>2022-06-13</td>
+      <td>2022-12-31</td>
+      <td>Central South University Xiangya School of Medicine</td>
+      <td>中南大学湘雅医院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yale-China Association</td>
+      <td>雅礼协会</td>
+      <td>United States</td>
+      <td>2022 Chia Family Health Fellowship Program (Huayuan County)</td>
+      <td>2022年度湘西贾氏卫生奖学金项目（花垣县）</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Health</td>
+      <td>2022-06-13</td>
+      <td>2022-12-31</td>
+      <td>Central South University Xiangya School of Medicine</td>
+      <td>中南大学湘雅医院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yale-China Association</td>
+      <td>雅礼协会</td>
+      <td>United States</td>
+      <td>2022 Chia Family Health Fellowship Program (Jishou City)</td>
+      <td>2022年度湘西贾氏卫生奖学金项目（吉首市）</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Health</td>
+      <td>2022-06-13</td>
+      <td>2022-12-31</td>
+      <td>Central South University Xiangya School of Medicine</td>
+      <td>中南大学湘雅医院</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Yale-China Association</td>
+      <td>雅礼协会</td>
+      <td>United States</td>
       <td>Fourth Annual Meeting for the Chia Scholarship in Xiangxi</td>
       <td>第四届湘西贾氏奖学金年会</td>
       <td>Hunan Province</td>
@@ -70158,57 +70294,6 @@
       <td>2020-07-31</td>
       <td>Yuanling County No.2 Middle School</td>
       <td>沅陵县第二中学</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Yale-China Association</td>
-      <td>雅礼协会</td>
-      <td>United States</td>
-      <td>2022 Chia Family Health Fellowship Program (Fenghuang County)</td>
-      <td>2022年度湘西贾氏卫生奖学金项目（凤凰县）</td>
-      <td>Hunan Province</td>
-      <td>湖南省</td>
-      <td>Education, Health</td>
-      <td>2022-06-13</td>
-      <td>2022-12-31</td>
-      <td>Central South University Xiangya School of Medicine</td>
-      <td>中南大学湘雅医院</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Yale-China Association</td>
-      <td>雅礼协会</td>
-      <td>United States</td>
-      <td>2022 Chia Family Health Fellowship Program (Huayuan County)</td>
-      <td>2022年度湘西贾氏卫生奖学金项目（花垣县）</td>
-      <td>Hunan Province</td>
-      <td>湖南省</td>
-      <td>Education, Health</td>
-      <td>2022-06-13</td>
-      <td>2022-12-31</td>
-      <td>Central South University Xiangya School of Medicine</td>
-      <td>中南大学湘雅医院</td>
-      <td>School, College, University, or Training Institution</td>
-      <td>Not Applicable</td>
-      <td>Not Applicable</td>
-    </tr>
-    <tr>
-      <td>Yale-China Association</td>
-      <td>雅礼协会</td>
-      <td>United States</td>
-      <td>2022 Chia Family Health Fellowship Program (Jishou City)</td>
-      <td>2022年度湘西贾氏卫生奖学金项目（吉首市）</td>
-      <td>Hunan Province</td>
-      <td>湖南省</td>
-      <td>Education, Health</td>
-      <td>2022-06-13</td>
-      <td>2022-12-31</td>
-      <td>Central South University Xiangya School of Medicine</td>
-      <td>中南大学湘雅医院</td>
       <td>School, College, University, or Training Institution</td>
       <td>Not Applicable</td>
       <td>Not Applicable</td>
