--- a/piece/final/final_RO_trade.html
+++ b/piece/final/final_RO_trade.html
@@ -104,7 +104,7 @@ font-family: 'PortraitText';
 
 <body>
 
-<div id="header"><h1>Foreign NGO Representative Offices Engaged in Trade- or Industry-Related Work, as a Percentage of All Offices Registered, by Year</h1></div>
+<div id="header"><h1>1 Foreign NGO Representative Offices Engaged in Trade- or Industry-Related Work, as a Percentage of All Offices Registered, by Year</h1></div>
 <table class="sortable">
 <!–– add your tableizer data below this line––>
 
@@ -122,7 +122,7 @@ font-family: 'PortraitText';
 <!–– add your tableizer data above this line––>
 
 
-<div id="footer"><p>This table does not include the #TK representative offices that have <a href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.</p><p>
+<div id="footer"><p>This table does not include the #TK representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.</p><p>
 Any given foreign NGO representative office may be engaged in multiple fields of work.</p>
 </div>
 
