--- a/piece/final/final_RO_locations.html
+++ b/piece/final/final_RO_locations.html
@@ -120,7 +120,7 @@ font-family: 'PortraitText';
 <!–– add your tableizer data above this line––>
 
 
-<div id="footer">This table does not include the #TK representative offices that have <a href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.
+<div id="footer">This table does not include the #TK representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.
 </div>
 
 </body>
