--- a/piece/final/final_RO_trade.html
+++ b/piece/final/final_RO_trade.html
@@ -104,7 +104,7 @@ font-family: 'PortraitText';
 
 <body>
 
-<div id="header"><h1>1 Foreign NGO Representative Offices Engaged in Trade- or Industry-Related Work, as a Percentage of All Offices Registered, by Year</h1></div>
+<div id="header"><h1>Foreign NGO Representative Offices Engaged in Trade- or Industry-Related Work, as a Percentage of All Offices Registered, by Year</h1></div>
 <table class="sortable">
 <!–– add your tableizer data below this line––>
 
