--- a/piece/final/final_RO_trade.html
+++ b/piece/final/final_RO_trade.html
@@ -99,10 +99,38 @@ font-family: 'PortraitText';
 /* vertical-align: text-top; */
 }
 
+
+/* this stuff makes it centered vertically! https://stackoverflow.com/a/6182661/7841877 */
+.outer {
+  display: table;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
+	max-width: 95%;
+  /* width: 400px; */
+  /* Whatever width you want */
+}
+
 </style>
 </head>
 
 <body>
+
+	<div class="outer">
+	<div class="middle">
+	<div class="inner">
 
 <div id="header"><h1>Foreign NGO Representative Offices Engaged in Trade- or Industry-Related Work, as a Percentage of All Offices Registered, by Year</h1></div>
 <table class="sortable">
@@ -124,6 +152,10 @@ font-family: 'PortraitText';
 
 <div id="footer"><p>This table does not include the #TK representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.</p><p>
 Any given foreign NGO representative office may be engaged in multiple fields of work.</p>
+</div>
+
+</div>
+</div>
 </div>
 
 </body>
