--- a/piece/final/final_TA_locations.html
+++ b/piece/final/final_TA_locations.html
@@ -99,10 +99,39 @@ font-family: 'PortraitText';
 /* vertical-align: text-top; */
 }
 
+
+/* this stuff makes it centered vertically! https://stackoverflow.com/a/6182661/7841877 */
+.outer {
+  display: table;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
+	max-width: 95%;
+  /* width: 400px; */
+  /* Whatever width you want */
+}
+
 </style>
 </head>
 
 <body>
+
+
+		<div class="outer">
+		<div class="middle">
+		<div class="inner">
 
 <div id="header"><h1>Foreign NGO Temporary Activities Taking Place in Certain Locations, as a Percentage of All Temporary Activities Initiated, by Year</h1></div>
 <table class="sortable">
@@ -119,6 +148,10 @@ font-family: 'PortraitText';
 
 
 <div id="footer">One temporary activity may take place in multiple provinces; this table includes any activity which listed Guangdong, Beijing, or Shanghai as the location, or one of the locations, in which an activity was to occur. The Guangdong, Beijing, or Shanghai numbers do not include any activities described as taking place in “China” generally.</div>
+
+</div>
+</div>
+</div>
 
 </body>
 </html>
