--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -90,7 +90,7 @@
 
     <script>
 
-var data = [{"month":"March 2022","arrests":4},{"month":"February 2022","arrests":4},{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":3},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":0},{"month":"September 2021","arrests":16},{"month":"August 2021","arrests":8},{"month":"July 2021","arrests":13},{"month":"June 2021","arrests":4},{"month":"May 2021","arrests":2},{"month":"April 2021","arrests":0},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":48},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":2},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
+var data = [{"month":"June 2022","arrests":2},{"month":"May 2022","arrests":6},{"month":"April 2022","arrests":2},{"month":"March 2022","arrests":4},{"month":"February 2022","arrests":4},{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":3},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":0},{"month":"September 2021","arrests":16},{"month":"August 2021","arrests":8},{"month":"July 2021","arrests":13},{"month":"June 2021","arrests":4},{"month":"May 2021","arrests":2},{"month":"April 2021","arrests":0},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":48},{"month":"January 2021","arrests":0},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":1},{"month":"October 2020","arrests":2},{"month":"September 2020","arrests":3},{"month":"August 2020","arrests":0},{"month":"July 2020","arrests":1}];
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
             top: 20,
@@ -100,7 +100,7 @@ var data = [{"month":"March 2022","arrests":4},{"month":"February 2022","arrests
         };
 
         var width = 300 - margin.left - margin.right,
-            height = 300 - margin.top - margin.bottom;
+            height = 400 - margin.top - margin.bottom;
 
         var svg = d3.select("#graphic").append("svg")
             .attr("width", width + margin.left + margin.right)
@@ -169,7 +169,7 @@ var data = [{"month":"March 2022","arrests":4},{"month":"February 2022","arrests
 
 d3.select("body").append("div")
     .attr("class", "footnote")
-    .html("<em>Total individuals charged: 113<br>For people charged multiple times, only the first charge is counted here.</em>");
+    .html("<em>Total individuals charged: 123<br>For people charged multiple times, only the first charge is counted here.</em>");
 
 
     </script>
