--- a/piece/final/final_RO_locations.html
+++ b/piece/final/final_RO_locations.html
@@ -145,13 +145,12 @@ font-family: 'PortraitText';
  <tr><td>Beijing Registrations</td><td>170</td><td>28%</td></tr>
  <tr><td>Shanghai Registrations</td><td>144</td><td>24%</td></tr>
  <tr><td>Total Registrations</td><td>610</td><td>100%</td></tr>
-
 </tbody></table>
 
 <!–– add your tableizer data above this line––>
 
 
-<div id="footer">This table does not include the #TK representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.
+<div id="footer">This table does not include the 46 representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of June 30, 2022.
 </div>
 
 </div>
