--- a/piece/final/final_RO_HK.html
+++ b/piece/final/final_RO_HK.html
@@ -145,15 +145,12 @@ font-family: 'PortraitText';
  <tr><td>2020</td><td>6</td><td>50</td><td>12%</td></tr>
  <tr><td>2021</td><td>6</td><td>55</td><td>11%</td></tr>
  <tr><td>2022</td><td>5</td><td>25</td><td>20%</td></tr>
-
-
-
 </tbody></table>
 
 <!–– add your tableizer data above this line––>
 
 
-<div id="footer">This table does not include the #TK representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.
+<div id="footer">This table does not include the 46 representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of June 30, 2022.
 </div>
 
 </div>
