--- a/piece/final/final_RO_trade.html
+++ b/piece/final/final_RO_trade.html
@@ -136,21 +136,20 @@ font-family: 'PortraitText';
 <table class="sortable">
 <!–– add your tableizer data below this line––>
 
-	<thead><tr class="tableizer-firstrow"><th>Year</th><th>Offices Registered Engaged in Trade or Industry</th><th>Total Number of Offices Registered</th><th>Percentage</th></tr></thead><tbody>
-	 <tr><td>2017</td><td>140</td><td>278</td><td>50%</td></tr>
-	 <tr><td>2018</td><td>58</td><td>121</td><td>48%</td></tr>
-	 <tr><td>2019</td><td>40</td><td>81</td><td>49%</td></tr>
-	 <tr><td>2020</td><td>32</td><td>50</td><td>64%</td></tr>
-	 <tr><td>2021</td><td>43</td><td>55</td><td>78%</td></tr>
-	 <tr><td>2022</td><td>16</td><td>25</td><td>64%</td></tr>
-	</tbody></table>
 
+<thead><tr class="tableizer-firstrow"><th>Year</th><th>Offices Registered Engaged in Trade or Industry</th><th>Total Number of Offices Registered</th><th>Percentage</th></tr></thead><tbody>
+ <tr><td>2017</td><td>140</td><td>278</td><td>50%</td></tr>
+ <tr><td>2018</td><td>58</td><td>121</td><td>48%</td></tr>
+ <tr><td>2019</td><td>40</td><td>81</td><td>49%</td></tr>
+ <tr><td>2020</td><td>32</td><td>50</td><td>64%</td></tr>
+ <tr><td>2021</td><td>43</td><td>55</td><td>78%</td></tr>
+ <tr><td>2022</td><td>16</td><td>25</td><td>64%</td></tr>
 </tbody></table>
 
 <!–– add your tableizer data above this line––>
 
 
-<div id="footer"><p>This table does not include the #TK representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of DATE TK.</p><p>
+<div id="footer"><p>This table does not include the 46 representative offices that have <a target="_blank" rel="noopener noreferrer" href="https://www.chinafile.com/ngo/latest/list-of-de-registered-representative-offices">de-registered</a> as of June 30, 2022.</p><p>
 Any given foreign NGO representative office may be engaged in multiple fields of work.</p>
 </div>
 
