--- a/viz/NSL/NSL_categories_grouped_bar1_20220328.html
+++ b/viz/NSL/NSL_categories_grouped_bar1_20220328.html
@@ -3,7 +3,7 @@
 <!-- https://bl.ocks.org/ctiml/541d7cc770108ccff79a -->
 
 <meta charset="utf-8">
-<title>NSL Categories</title>
+<title>NSL Categoriess</title>
 <style>
 
 body{
