--- a/viz/NSL/test/NSL_table_final_test3.html
+++ b/viz/NSL/test/NSL_table_final_test3.html
@@ -75,9 +75,7 @@
 <div id="header">Individuals Arrested in Relation to the Hong Kong National Security Law</div>
 
 
-<div id="subhed">Notes:<br>
-<ul><li>All offenses detailed here derive from Hong Kong government allegations and neither the researchers nor ChinaFile’s editors have independently verified them.</li>
-<li>In this table, the term &#8220;sedition&#8221; refers to a range of related crimes that are prescribed in Section 10 of the Crimes Ordinance, including but not limited to &#8220;utterance of seditious words&#8221; and &#8220;conspiracy to publish seditious materials.&#8221;</li></ul>
+<div id="subhed">Note: All offenses detailed here derive from Hong Kong government allegations and neither the researchers nor ChinaFile’s editors have independently verified them.<br><br>
 Data cut-off date: December 14, 2022<br>
 </div>
 	<table class="sortable">
