--- a/viz/NSL/test/charges_month.html
+++ b/viz/NSL/test/charges_month.html
@@ -84,8 +84,8 @@
 
 <body>
 	<div id="wrapper">
-	<div id="header">Charges by Month</div>
-	<div id="subhed">Individuals arrested and charged by the NSD or under the NSL</div>
+	<div id="header">Number of Individuals Charged by Month</div>
+	<!-- <div id="subhed">Individuals arrested and charged by the NSD or under the NSL</div> -->
     <div id="graphic"></div>
 
     <script>
