--- a/viz/NSL/test/arrests_foreign_pie.html
+++ b/viz/NSL/test/arrests_foreign_pie.html
@@ -52,6 +52,14 @@ left:-50px;
 top:-80px; */
 }
 
+.footnote {
+		font-size: 13px;
+		text-align:center;
+		fill: #000;
+		font-family: Arial;
+		padding-top: 5px;
+}
+
 </style>
 </head>
 
@@ -59,8 +67,8 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header">Individuals Targeted Due to Foreign Interactions</div>
-	<div id="subhed">People arrested by the NSD or under the NSL, who were likely targeted based on their interactions with foreign entities</div>
+	<div id="header">Number of Individuals Targeted Due to Foreign Interactions, Out of All Individuals Arrested</div>
+	<!-- <div id="subhed">People arrested by the NSD or under the NSL, who were likely targeted based on their interactions with foreign entities</div> -->
   <div id="pieChart"></div>
   </div>
 
@@ -108,7 +116,7 @@ var pie = new d3pie("pieChart", {
 		},
 		"percentage": {
 			"color": "#000000",
-			"decimalPlaces": 1,
+			"decimalPlaces": 0,
 			"fontSize": 14,
 			"font": "Arial"
 		},
@@ -147,6 +155,9 @@ var pie = new d3pie("pieChart", {
 
 });
 
+d3.select("body").append("div")
+    .attr("class", "footnote")
+    .html("<em>This refers to individuals targeted based on their interactions with foreign entities, as categorized by the authors, and is not necessarily related to grounds for arrest, charge, or conviction.</em>");
 
 
 </script>
