--- a/viz/NSL/test/arrests_month.html
+++ b/viz/NSL/test/arrests_month.html
@@ -85,8 +85,8 @@
 
 <body>
 	<div id="wrapper">
-	<div id="header">Arrests by Month</div>
-	<div id="subhed">Individuals arrested by the NSD or under the NSL</div>
+	<div id="header">Number of Individuals Arrested by Month</div>
+	<!-- <div id="subhed">Individuals arrested by the NSD or under the NSL</div> -->
     <div id="graphic"></div>
 
     <script>
