--- a/viz/NSL/arrest_venn.html
+++ b/viz/NSL/arrest_venn.html
@@ -15,7 +15,7 @@ body {
 
 <body>
 	<div id="wrapper">
-	<div id="header">Stated Grounds for Arrest</div>
+	<div id="header">Number of Individuals Arrested on NSL and Non-NSL Grounds</div>
 	<!-- <div id="subhed">Individuals arrested for violating the NSL, individuals arrested by the NSD without invocation of the NSL, and individuals arrested for both NSL and non-NSL violations</div> -->
   <div id="venn"></div>
 	</div>
@@ -117,7 +117,7 @@ var div = d3.select("#venn").datum(sets).call(chart);
 
 d3.select("#wrapper").append("div")
   .attr("class", "footnote")
-  .html("<em>The category “NSL” refers to individuals arrested for violating the NSL. “Non-NSL” refers to individuals arrested by the NSD without invocation of the NSL. “Both” refers to individuals arrested for multiple violations, including both NSL and non-NSL violations.</em>");
+  .html("<em>The category “NSL” refers to individuals arrested for NSL-related offenses. “Non-NSL” refers to individuals arrested for sedition, or by the NSD for non-NSL-related offenses.</em>");
 
 
 </script>
