--- a/viz/NSL/denied_bail_pie.html
+++ b/viz/NSL/denied_bail_pie.html
@@ -59,7 +59,7 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header">Number of Individuals Denied Bail, out of All Individuals Charged</div>
+	<div id="header">Number of Individuals Denied Bail, out of All Individuals Arrested</div>
 	<!-- <div id="subhed">Individuals charged and denied bail, out of all individuals charged</div> -->
   <div id="pieChart"></div>
   </div>
