--- a/viz/NSL/denied_bail_pie.html
+++ b/viz/NSL/denied_bail_pie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>NSL Arrests vs. Denied Bail</title>
+<title>Charged Individuals Denied Bail</title>
 <style>
 
 body{
@@ -59,7 +59,7 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header">Number of Individuals Denied Bail, out of All Individuals Arrested</div>
+	<div id="header">Number of Individuals Denied Bail, out of All Individuals Charged</div>
 	<!-- <div id="subhed">Individuals charged and denied bail, out of all individuals charged</div> -->
   <div id="pieChart"></div>
   </div>
@@ -79,13 +79,13 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 				"label": "Denied bail",
-				"value": 94,
+				"value": 92,
 				"color": "#686868"
 			},
 
 {
 "label": "Granted Bail",
-"value": 133,
+"value": 43,
 "color": "#03798D"
 }
 
