--- a/viz/NSL/convictions_pie.html
+++ b/viz/NSL/convictions_pie.html
@@ -99,7 +99,7 @@ var pie = new d3pie("pieChart", {
 
 
 			{
-				"label": "Ongoing",
+				"label": "Case ongoing",
 				"value": 81,
 				"color": "#03798D"
 			}
