--- a/viz/NSL/denied_bail_pie.html
+++ b/viz/NSL/denied_bail_pie.html
@@ -84,7 +84,7 @@ var pie = new d3pie("pieChart", {
 			},
 
 {
-"label": "Granted Bail",
+"label": "Granted bail",
 "value": 43,
 "color": "#03798D"
 }
